structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_buf_name_value.rs
#[structmeta_tests::attr_required_name_args(value = 10)]
fn my_func() {}

fn main() {}
